fixed autocomplete not showing all results properly

--- a/herolo-weather-task/src/components/Searchbar/Autocomplete.css
+++ b/herolo-weather-task/src/components/Searchbar/Autocomplete.css
@@ -21,8 +21,8 @@
     /* border: 1px solid #999; */
     border-top-width: 0;
     list-style: none;
-    margin-top: 20px;
-    max-height: 5%;
+    margin-top: 1.5rem;
+    max-height: 20%;
     overflow-y: auto;
     padding-left: 0;
     width: 10%;
